--- a/src/main/resources/templates/informe_baja.html
+++ b/src/main/resources/templates/informe_baja.html
@@ -195,7 +195,7 @@
                                                 <div class="form-group">
                                                     <div class="form-line">
                                                         <input type="text" rows="3"   class="form-control no-resize" placeholder="Ej: UAP-123456789 o 148-05-10-12345"
-                                                            name="id_Almacen" required></input>
+                                                            name="id_Almacen" ></input>
                                                         <input type="hidden" name="id_almacen" id="vectorInput">
                                                     </div>
                                                     <div id="replace_div2">
