--- a/src/main/resources/templates/layaut/layaut.html
+++ b/src/main/resources/templates/layaut/layaut.html
@@ -323,15 +323,27 @@
                     </a>
                     <ul class="ml-menu">
                         <li>
-                            <a th:href="${'../../../../hardware-servicio/add_fallas'}">
+                            <a th:href="${'../../../../hardware-servicio/reporte'}">
                                 <i class="material-icons" style="font-size: 15px">assignment</i>
-                                <span>REPORTE GENERAL</span>
+                                <span>REPORTE GENERAL DE SERVICIOS</span>
                             </a>
                         </li>
                         <li>
-                            <a th:href="${'../../../../hardware-servicio/lista-fallas-equipos'}">
+                            <a th:href="${'../../../../hardware-servicio/reporte_personalizado'}">
                                 <i class="material-icons" style="font-size: 15px">assignment</i>
-                                <span>REPORTE PERZONALIZADO</span>
+                                <span>REPORTE PERZONALIZADO DE SERVICIO</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a th:href="${'../../../../hardware-servicio/reporte_personalizado'}">
+                                <i class="material-icons" style="font-size: 15px">assignment</i>
+                                <span>REPORTE PERZONALIZADO DE BAJAS</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a th:href="${'../../../../hardware-servicio/reporte_personalizado'}">
+                                <i class="material-icons" style="font-size: 15px">assignment</i>
+                                <span>REPORTE PERZONALIZADO DE BAJAS</span>
                             </a>
                         </li>
                     </ul>
